data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1107.wast
;; 8. **Test Description:**    - **Scenario:** Use `unreachable` inside an invalid type conversion section, where conversions shouldn't logically reach this point.    - **Constraint Checked:** Ensures that type conversion errors fall into an `unreachable` trap.    - **Relation to Unreachable Code Execution:** Ensures malformed or misinterpreted type conversions cause the execution trap.

(assert_invalid
  (module (func $type-conversion-invalid-unreachable
    (drop (i32.trunc_f32_s (unreachable)))
  ))
  "type mismatch"
)